--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8" />
@@ -57,6 +57,8 @@
             <div class="flex items-center gap-10">
                 <a class="text-xl font-extrabold tracking-tighter" href="#">VIBE CODING</a>
                 <div class="hidden lg:flex items-center gap-8">
+                    <a class="nav-link" th:href="@{/}">Home</a>
+                    <a class="nav-link" th:href="@{/posts}">게시글</a>
                     <a class="nav-link" href="#">Product</a>
                     <a class="nav-link" href="#">Features</a>
                     <a class="nav-link" href="#">Community</a>
