--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -51,6 +51,8 @@
             <div class="flex items-center gap-10">
                 <a class="text-xl font-extrabold tracking-tighter" th:href="@{/}">VIBE CODING</a>
                 <div class="hidden lg:flex items-center gap-8">
+                    <a class="nav-link" th:href="@{/}">Home</a>
+                    <a class="nav-link" th:href="@{/posts}">게시글</a>
                     <a class="nav-link" href="#">Product</a>
                     <a class="nav-link" href="#">Features</a>
                     <a class="nav-link" href="#">Community</a>
