--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,12 +57,12 @@
             <div class="flex items-center gap-10">
                 <a class="text-xl font-extrabold tracking-tighter" href="#">VIBE CODING</a>
                 <div class="hidden lg:flex items-center gap-8">
-                    <a class="nav-link" th:href="@{/}">Home</a>
+                    <a class="nav-link" th:href="@{/}">홈</a>
                     <a class="nav-link" th:href="@{/posts}">게시글</a>
-                    <a class="nav-link" href="#">Product</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Community</a>
-                    <a class="nav-link" href="#">Docs</a>
+                    <a class="nav-link" href="#">제품</a>
+                    <a class="nav-link" href="#">기능</a>
+                    <a class="nav-link" href="#">커뮤니티</a>
+                    <a class="nav-link" href="#">문서</a>
                 </div>
             </div>
             <div class="flex items-center gap-6">
